<resources>
    <string name="thongtincaptruc">Thông tin cáp trục</string>
    <string name="ghilaithongtin">Ghi lại</string>
    <string name="thongtincapnhanh">Thông tin cáp nhánh</string>
    <string name="loaicap">Loại cáp </string>
    <string name="cottrongmoi">Số cột trồng mới</string>
    <string name="cotcosan">Số cột có sẵn</string>
    <string name="sotuthuebao">Số tủ thuê bao</string>
    <string name="soicapnhanh">Số sợi cáp nhánh</string>
    <string name="soicaptruc_ht">Số sợi cáp trục loại 24</string>
    <string name="soicaptruc_bt">Số sợi cáp trục loại 48</string>
    <string name="soicaptruc_cs">Số sợi cáp trục loại 96</string>
    <string name="soidropgo">Số sợi Drop và Go</string>
    <string name="sotunhanh">Số tủ nhánh</string>
    <string name="thongtinthietke">Thiết kế</string>
    <string name="app_name">GSCT Test</string>
    <string name="action_settings">Cấu hình</string>
    <string name="text_loading">Đang tải dữ liệu....</string>
    <string name="text_sync_loading">Đang đồng bộ dữ liệu....</string>
    <string name="text_sync_error">Đồng bộ dữ liệu bị lỗi, vui lòng thử lại....</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loading">&#160;đang tải &#8230;</string>
    <string name="text_acc">TÀI KHOẢN (ACC SSO)</string>
    <string name="text_pass">MẬT KHẨU (PASS SSO)</string>
    <string name="text_login">ĐĂNG NHẬP</string>
    <string name="text_slogen">TẬP ĐOÀN VIỄN THÔNG QUÂN ĐỘI VIETTEL</string>
    <string name="text_system_supervision">HỆ THỐNG GIÁM SÁT CÔNG TRÌNH</string>
    <string name="text_copyright">Bản quyền thuộc về VT <font fgcolor="#FFFF0000">ICT</font></string>
    <string name="text_version">Version 2.0</string>
    <string name="text_search">Tìm kiếm</string>
    <string name="text_location">Vị trí của bạn</string>
    <string name="text_map_long">Kinh độ</string>
    <string name="text_map_lat">Vĩ độ</string>
    <string name="text_map_setlocation">Chốt vị trí</string>
    <string name="text_map_location_no_open">Bạn chưa bật GPS để xác định vị trí</string>
    <string name="text_save">Lưu</string>
    <string name="text_back">Quay lại</string>
    <string name="text_add_new_pipe">Thêm mới</string>
    <string name="text_add_perpect">Hoàn thành</string>
    <string name="text_delete_new_pipe">Xóa cột</string>
    <string name="text_empty"></string>
    <string name="text_view_dot">....</string>
    <string name="text_close">Đóng</string>
    <string name="text_choice">Chọn</string>
    <string name="text_choice1">---Chọn---</string>
    <string name="text_delete_title">Thông báo hệ thống</string>
    <string name="text_messager_header">Thông báo hệ thống</string>
    <string name="text_delete_button">Xóa</string>
    <string name="text_close_button">Đóng</string>
    <string name="text_update_success">Thao tác thành công</string>
    <string name="khongthexoa">Công trình này đã hoàn thành nên không thể xóa</string>
    <string name="null_text">Bạn chưa nhập</string>
    <string name="text_update_error">Lưu không thành công</string>
    <string name="actionbar_activity_not_found">Failed to open intent</string>
    <string name="text_search_value_default">Tất cả</string>
    <string name="text_empty_message">Bạn chưa nhập giá trị</string>
    <string name="img_path">/mnt/sdcard/imgtemplate/</string>
    <string name="img_view_title">Hiển thị ảnh</string>
    <string name="text_set_value_title">Nhập giá trị</string>
    <string name="text_warning_logout">Bạn chắc muốn đăng xuất khỏi chương trình</string>
    <string name="text_ok">Đồng ý</string>
    <string name="app_permission_name">Bảo mật broadcast</string>
    <string name="text_confirm_title">Xác nhận thông tin trước khi ghi lại</string>
    <string name="text_confirm_save">Bạn có chắc chắn thực hiện không?</string>
    <string name="text_confirm_save_change">Dữ liệu bảng cáp nhánh và dữ liệu bảng Drop và go có thể bị thay đổi bạn có chắc thực hiện không?</string>
    <string name="text_tiendo">Bạn có muốn chuyển sang tiến độ "%1$s" hay không?</string>
    <string name="text_tiendo_complete">Tiến độ đã ở trạng thái "%1$s" nên không thể cập nhật được tiến độ</string>
    <string name="text_tiendo_not_complete">Bạn chưa cập nhật ngày hoàn thành ở từng mục giám sát nên chưa thể cập nhật tiến độ sang Đã hoàn thành</string>
    <string name="text_tiendo_loaituyen">Bạn phải xác định loại tuyến trước khi cập nhật tiến độ</string>
    <string name="text_confirm_found_num">Số móng co trong thi công cột đang là %1$d, bạn có chắc chắn muốn xóa móng bị thừa?</string>
    <string name="text_confirm_fiber_num">Số sợi trong thiết kế đã giảm đi, bạn có chắc chắn muốn xóa các sợi bị thừa?</string>
    <string name="text_confirm_tank_num">Số bể trong thiết kế đã giảm đi, bạn có chắc chắn muốn xóa bể bị thừa?</string>
    <string name="text_confirm_tank_fiber_num">Số bể và sợi trong thiết kế đã giảm đi, bạn có chắc chắn muốn xóa bể và sợi bị thừa?</string>
    <string name="text_unvalid_message">Bạn chưa nhập đầy đủ thông tin</string>
    <string name="error_common">Có lỗi xảy ra, vui lòng thử lại.</string>
    <string name="text_sync_success">Đồng bộ dữ liệu thành công</string>
    <string name="text_out_of_key">Khoảng khóa đã hết bạn cần click đồng bộ để lấy mới</string>
    <string name="text_3g_wifi_offline">Hãy bật 3G hoặc Wifi để đồng bộ dữ liệu</string>
    <string name="field_is_null">Thông tin trống</string>
    <string name="fomat_is_wrong">Sai định dạng</string>
    <string name="field_is_equal_zero">Thông tin nhập phải lớn hơn 0</string>
    <string name="text_progcessing">Đang xử lí dữ liệu....</string>
    <string name="text_copy">Copy</string>
    <string name="text_paste">Paste</string>
    <string name="text_temp_memory_copy">Đã chép văn bản vào bộ nhớ tạm</string>
    <string name="image_unqualify_check_image_null">Bạn phải chọn ít nhất 1 ảnh trước khi xóa</string>
    <string name="out_of_max_image_capture">Bạn chỉ được chụp tối đa 5 ảnh</string>
    <string name="measurement_constr_detail_title">Thông tin đo kích thước chi tiết</string>
    <string name="plan_edit_notify">Không cập nhật được kế hoạch</string>
    <string name="login_error_messager">Tài khoản không đúng</string>
    <string name="login_offline_error_messager">Tài khoản không đúng, hay bật 3G, Wifi để đăng nhập online</string>
    <string name="constr_sonstruction_title">Danh sách công trình được giao giám sát</string>
    <string name="constr_sonstruction_setline_title">Xác định loại tuyến cho công trình</string>
    <string name="constr_sonstruction_macongtrinh">Mã công trình</string>
    <string name="constr_sonstruction_loaicongtrinh">Loại công trình</string>
    <string name="constr_sonstruction_matram">Mã trạm</string>
    <string name="constr_sonstruction_trangthai">Trạng thái</string>
    <string name="constr_sonstruction_bts">BTS</string>
    <string name="constr_sonstruction_tuyen">Tuyến</string>
    <string name="constr_sonstruction_status">Tất cả</string>
    <string name="constr_sonstruction_list_stt">STT</string>
    <string name="constr_sonstruction_list_mct">Mã công trình</string>
    <string name="constr_sonstruction_list_mt">Mã trạm</string>
    <string name="constr_sonstruction_matuyen">Mã tuyến</string>
    <string name="constr_sonstruction_diemdau">Điểm đầu</string>
    <string name="constr_sonstruction_diemcuoi">Điểm cuối</string>
    <string name="constr_sonstruction_list_loaicongtrinh">Loại công trình</string>
    <string name="constr_sonstruction_list_trangthai">Trạng thái</string>
    <string name="constr_sonstruction_list_request_date">Ngày giao việc</string>
    <string name="constr_sonstruction_list_finish_date">Hạn hoàn thành (ngày)</string>
    <string name="constr_sonstruction_list_tiendo">Tiến độ</string>
    <string name="constr_sonstruction_list_thaotac">Thao tác</string>
    <string name="constr_sonstruction_list_loaituyen">Loại tuyến</string>
    <string name="constr_sonstruction_progress_doing">Đã bàn giao mặt bằng</string>
    <string name="constr_sonstruction_progress_uncomplete">Chưa hoàn thành</string>
    <string name="constr_sonstruction_progress_complete">Đã khởi công</string>
    <string name="constr_sonstruction_progress_uncompleted">Đã hoàn thành</string>
    <string name="constr_sonstruction_progress_unrealzed">Chờ bàn giao mặt bằng</string>
    <string name="constr_sonstruction_status_chuadat">Chưa đạt</string>
    <string name="constr_sonstruction_status_dat">Đạt</string>
    <string name="constr_sonstruction_status_chuadanhgia">Chưa đánh giá</string>
    <string name="constr_sonstruction_type_bts">BTS</string>
    <string name="constr_sonstruction_type_line">Tuyến</string>
    <string name="constr_sonstruction_type_brcd">Băng rộng cố định</string>
    <string name="constr_sonstruction_type_sh">SubHeadend</string>
    <string name="constr_sonstruction_no_set_line_type">Bạn chưa xác định tuyến ngầm hay tuyến treo</string>
    <string name="constr_sonstruction_no_set_sh">SubHeadend đang trong quá trình xây dựng</string>
    <string name="constr_sonstruction_setline_mt">Mã tuyến</string>
    <string name="constr_sonstruction_setline_dd">Điểm đấu</string>
    <string name="constr_sonstruction_setline_dc">Điểm cuối</string>
    <string name="constr_sonstruction_setline_lt">Loại tuyến</string>
    <string name="constr_sonstruction_setline_tn">Tuyến ngầm</string>
    <string name="constr_sonstruction_setline_brcd">Băng rộng cố định</string>
    <string name="constr_sonstruction_setline_sh">SubHeadend</string>
    <string name="constr_sonstruction_setline_tt">Tuyến treo</string>
    <string name="constr_sonstruction_setline_noselectline">Bạn chưa chọn loại tuyến</string>
    <string name="line_background_header_title">Đánh giá chất lượng công trình tuyến ngầm</string>
    <string name="line_background_header_title_brcd_mt">Đánh giá chất lượng công trình mạng ngoại vi</string>
    <string name="line_background_header_title_sub_mt">Đánh giá chất lượng công trình SubHeadEnd</string>
    <string name="line_background_info_title">Thông tin</string>
    <string name="line_background_info_line_title">Tuyến</string>
    <string name="line_background_info_line_title_tram">Trạm</string>
    <string name="line_background_info_line_station_code_title">Mã công trình</string>
    <string name="line_background_info_line_design">Đánh giá thiết kế</string>
    <string name="line_background_design_type">Loại thiết kế <font fgcolor="#FFFF0000">(*)</font></string>
    <string name="line_background_design_review">Đánh giá <font fgcolor="#FFFF0000">(*)</font></string>
    <string name="line_background_design_inter">Diễn giải</string>
    <string name="line_background_design_long">Tổng chiều dài tuyến	<font fgcolor="#FFFF0000">(*)</font></string>
    <string name="line_background_design_tank">Bể</string>
    <string name="line_background_design_tank_old">Bể có sẵn</string>
    <string name="line_background_design_tank_new">Bể xây mới</string>
    <string name="line_background_design_tank_size">SL</string>
    <string name="line_background_design_tank_dan1">Số bể đan 1</string>
    <string name="line_background_design_tank_dan2">Số bể đan 2</string>
    <string name="line_background_design_tank_dan3">Số bể đan 3</string>
    <string name="line_background_design_tank_long">Chiều dài</string>
    <string name="line_background_design_cable">Cáp</string>
    <string name="line_background_design_point_to_bridge">Điểm qua cầu cống</string>
    <string name="line_bg_mx_kl_tt_dat">Đạt</string>
    <string name="line_bg_mx_kl_tdcv">Tiến độ công việc</string>
    <string name="line_bg_mx_kl_tdcv_ht">Hoàn thành</string>
    <string name="line_bg_mx_kl_xn_title">Xác nhận trước khi chốt kết quả</string>
    <string name="line_bg_mx_kl_ttct">Trạng thái công trình</string>
    <string name="line_bg_mx_kl_xn">Xác nhận</string>
    <string name="line_bg_mx_kl_huy">Hủy</string>
</resources>