<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/border_layout"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:background="@drawable/bg_title"
        android:gravity="center_vertical"
        android:padding="@dimen/padding5"
        android:text="@string/line_bg_mx_kl_xn_title"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text_size_large_common"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dialog_trangthai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:layout_margin="@dimen/margin5"
        android:background="@drawable/bg_title"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/padding5" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/line_bg_mx_kl_ttct"
            android:textColor="@color/black_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_conclusion_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/line_bg_mx_kl_tt_dat"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_size_large_common"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_tiendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_trangthai"
        android:layout_margin="@dimen/margin5"
        android:background="@drawable/bg_title"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/padding5" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/line_bg_mx_kl_tdcv"
            android:textColor="@color/black_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_conclusion_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/line_bg_mx_kl_tdcv_ht"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_size_large_common"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_tiendo"
        android:layout_marginTop="@dimen/dialog_button_margin_top"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            style="@style/ViettelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_bg_mx_kl_xn" />

        <Button
            android:id="@+id/btn_no"
            style="@style/ViettelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_bg_mx_kl_huy" />
    </LinearLayout>

</RelativeLayout>