<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edt_popup_plan"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="left"
        android:hint="@string/text_view_dot"
        android:textSize="@dimen/text_plan_size2"
        android:background="@color/white"
        android:padding="8dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_min_height"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/margin" >

        <Button
            android:id="@+id/btn_popup_save_plan"
            style="@style/ViettelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_save" />

        <Button
            android:id="@+id/btn_popup_cancel"
            style="@style/ViettelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_close" />
    </LinearLayout>

</LinearLayout>