<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.viettel.actionbar.Header
        android:visibility="gone"
        android:id="@+id/actionbar"
        style="@style/ActionBar" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_constr_construction_rootmenu"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@+id/actionbar"
        android:background="@drawable/bg_tbarmenu" >

        <TextView
            android:id="@+id/constr_construction_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:gravity="center_vertical|left"
            android:text="@string/constr_sonstruction_title"
            android:textSize="@dimen/text_size_large_common"
            android:textStyle="normal" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tl_constr_construction_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_constr_construction_rootmenu"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/border_layout"
        android:padding="@dimen/padding"
        android:visibility="visible" >

        <TableRow
            android:id="@+id/trl_constr_construction_search_row1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/table_row_height"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/trl_constr_construction_search_row1_tv_mct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_macongtrinh"
                android:textSize="@dimen/text_size_common" />

            <com.viettel.view.control.VNMEditTextClearable
                android:id="@+id/trl_constr_construction_search_row1_edt_mct"
                style="@style/vOfficeeditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:hint="@string/constr_sonstruction_macongtrinh"
                android:inputType="text"
                android:singleLine="true" >
            </com.viettel.view.control.VNMEditTextClearable>

            <TextView
                android:id="@+id/trl_constr_construction_search_row1_tv_lct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_loaicongtrinh"
                android:textSize="@dimen/text_size_common" />

            <RelativeLayout
                android:id="@+id/rl_constr_construction_search_lct"
                android:layout_width="0dp"
                android:layout_height="@dimen/drop_box_heigh"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"
                android:background="@drawable/icon_dropdown" >

                <com.viettel.view.control.VNMTextViewCombo
                    android:id="@+id/rl_constr_construction_search_lct_tv_lct"
                    style="@style/vOfficeeditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/constr_sonstruction_status" >
                </com.viettel.view.control.VNMTextViewCombo>
            </RelativeLayout>

            <TextView
                android:id="@+id/trl_constr_construction_search_row1_tv_tt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_trangthai" />

            <RelativeLayout
                android:id="@+id/rl_constr_construction_search_tt"
                android:layout_width="0dp"
                android:layout_height="@dimen/drop_box_heigh"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15" >

                <com.viettel.view.control.VNMTextViewCombo
                    android:id="@+id/rl_constr_construction_search_lct_tv_tt"
                    style="@style/vOfficeeditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/constr_sonstruction_status" >
                </com.viettel.view.control.VNMTextViewCombo>
            </RelativeLayout>

            <TextView
                android:id="@+id/trl_constr_construction_search_row1_tv_td"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="0.08"
                android:text="@string/constr_sonstruction_list_tiendo" />

            <RelativeLayout
                android:id="@+id/rl_constr_construction_search_td"
                android:layout_width="0dp"
                android:layout_height="@dimen/drop_box_heigh"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.17" >

                <com.viettel.view.control.VNMTextViewCombo
                    android:id="@+id/rl_constr_construction_search_lct_tv_td"
                    style="@style/vOfficeeditTextView"
                    android:layout_width="match_parent"
                    android:lines="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/constr_sonstruction_status" >
                </com.viettel.view.control.VNMTextViewCombo>
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/trl_constr_construction_search_row2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/table_row_height"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/trl_constr_construction_search_row3_tv_matram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_matram" />

            <com.viettel.view.control.VNMEditTextClearable
                android:id="@+id/trl_constr_construction_search_row3_edt_matram"
                style="@style/vOfficeeditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:hint="@string/constr_sonstruction_matram"
                android:inputType="text"
                android:singleLine="true" >
            </com.viettel.view.control.VNMEditTextClearable>

            <TextView
                android:id="@+id/trl_constr_construction_search_row3_tv_matuyen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_matuyen" />

            <com.viettel.view.control.VNMEditTextClearable
                android:id="@+id/trl_constr_construction_search_row3_edt_matuyen"
                style="@style/vOfficeeditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:hint="@string/constr_sonstruction_matuyen"
                android:inputType="text"
                android:singleLine="true" >
            </com.viettel.view.control.VNMEditTextClearable>

            <TextView
                android:id="@+id/trl_constr_construction_search_row4_tv_diemdau"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_diemdau" />

            <com.viettel.view.control.VNMEditTextClearable
                android:id="@+id/trl_constr_construction_search_row4_edt_diemdau"
                style="@style/vOfficeeditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:hint="@string/constr_sonstruction_diemdau"
                android:inputType="text"
                android:singleLine="true" >
            </com.viettel.view.control.VNMEditTextClearable>

            <TextView
                android:id="@+id/trl_constr_construction_search_row4_tv_diemcuoi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="0.1"
                android:text="@string/constr_sonstruction_diemcuoi" />

            <com.viettel.view.control.VNMEditTextClearable
                android:id="@+id/trl_constr_construction_search_row4_edt_diemcuoi"
                style="@style/vOfficeeditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:hint="@string/constr_sonstruction_diemcuoi"
                android:inputType="text"
                android:singleLine="true" >
            </com.viettel.view.control.VNMEditTextClearable>

            <RelativeLayout
                android:id="@+id/rl_constr_construction_space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="0.5" >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal" >
				<!-- KienPV add new 10/09/2016 android:visibility="gone" -->
                <Button
                    android:visibility="gone"
                    android:id="@+id/constr_construction_btn_search"
                    style="@style/ViettelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_search" />
                <!-- end -->
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/rl_constr_construction_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tl_constr_construction_search"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:background="@drawable/border_layout"
        android:padding="@dimen/padding" >

        <LinearLayout
            android:id="@+id/ll_constr_construction_header"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="@color/white_color"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/constr_sonstruction_list_stt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="left|center_vertical"
                android:text="@string/constr_sonstruction_list_mct"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="left|center_vertical"
                android:text="@string/constr_sonstruction_list_loaicongtrinh"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="left|center_vertical"
                android:text="@string/constr_sonstruction_list_tiendo"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="left|center_vertical"
                android:text="@string/constr_sonstruction_list_trangthai"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="left|center_vertical"
                android:text="@string/constr_sonstruction_list_request_date"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.14"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/constr_sonstruction_list_finish_date"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.08"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/constr_sonstruction_list_thaotac"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.08"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/constr_sonstruction_list_loaituyen"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_constr_construction_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_constr_construction_header"
            android:background="@color/white_color"
            android:choiceMode="none" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>